# mcp-elixir-bootlin

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/: elixir_client.py  models.py  server.py
tests/: test_elixir_client.py  test_mcp_live.py
