[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-elixir-bootlin"
version = "0.1.0"
description = "MCP server for Bootlin Elixir API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Georgii Gennadev" }
]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
mcp-elixir-bootlin = "server:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["elixir_client", "models", "server"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
